
name:                harihara
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Kyle Carter
maintainer:          kylcarte@gmail.com
copyright:           Copyright 2013 Kyle Carter
category:            DB, JSON, Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

synopsis:            Web server for music libraries, inspired by shiva
description:         Cleans music metadata,
                     Maintains sqlite database of music,
                     Provides HTTP api to music browsing/playing.

executable harihara
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    OverloadedStrings,
                       DataKinds,
                       FlexibleInstances,
                       TemplateHaskell

  build-depends:       base ==4.6.*,
                       configurator ==0.2.*,
                       lens ==3.9.*,
                       text ==0.11.*,
                       aeson ==0.6.*,
                       bytestring ==0.10.*,
                       network ==2.4.*,
                       liblastfm ==0.1.*,
                       aeson-pretty ==0.7.*,
                       either ==3.4.*

  ghc-options:         -Wall
                       
  hs-source-dirs:      src
  default-language:    Haskell2010
