
name:                harihara
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Kyle Carter
maintainer:          kylcarte@gmail.com
copyright:           Copyright 2013 Kyle Carter
category:            DB, JSON, Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

synopsis:            Web server for music libraries, inspired by shiva
description:         Cleans music metadata,
                     Maintains sqlite database of music,
                     Provides HTTP api to music browsing/playing.
                     Or, will. At some point.

flag UsePkgConfig
  Description: Use pkg-config to check for library dependencies.
  Default: True

library
  hs-source-dirs:      src
  build-depends:       aeson        >= 0.6  && < 0.7  ,
                       aeson-pretty >= 0.7  && < 0.8  ,
                       base         >= 4    && < 5    ,
                       bytestring   >= 0.9  && < 0.11 ,
                       configurator >= 0.2  && < 0.3  ,
                       containers   >= 0.5  && < 0.6  ,
                       monadLib     >= 3.7  && < 3.8  ,
                       network      >= 2.4  && < 2.5  ,
                       taglib-api   >= 0.1  && < 0.2  ,
                       text         >= 0.11 && < 0.12 ,
                       transformers >= 0.3  && < 0.4  ,
                       liblastfm    >= 0.1  && < 0.2

  other-extensions:    OverloadedStrings,
                       DataKinds,
                       FlexibleInstances,
                       TemplateHaskell
                       
  exposed-modules:     Harihara
                       Harihara.Lastfm
                       Harihara.Lastfm.Base
                       Harihara.Lastfm.Parsers
                       Harihara.Lastfm.Parsers.Extras
                       Harihara.Lastfm.Parsers.Types
                       Harihara.Log
                       Harihara.Monad
                       Harihara.Options
                       Harihara.Tag
                       Harihara.Utils
  ghc-options:         -Wall
  default-language:    Haskell2010
  if flag(UsePkgConfig)
      Pkgconfig-Depends: taglib_c
  else
      extra-libraries: tag_c


executable harihara
  hs-source-dirs:      src
  main-is:             Main.hs

  other-extensions:    OverloadedStrings

  build-depends:       harihara     >= 0.1  && < 0.2  ,
                       aeson        >= 0.6  && < 0.7  ,
                       aeson-pretty >= 0.7  && < 0.8  ,
                       base         >= 4    && < 5    ,
                       bytestring   >= 0.9  && < 0.11 ,
                       configurator >= 0.2  && < 0.3  ,
                       containers   >= 0.5  && < 0.6  ,
                       lens         >= 3.9  && < 3.10 ,
                       monadLib     >= 3.7  && < 3.8  ,
                       network      >= 2.4  && < 2.5  ,
                       taglib-api   >= 0.1  && < 0.2  ,
                       text         >= 0.11 && < 0.12 ,
                       transformers >= 0.3  && < 0.4  ,
                       liblastfm    >= 0.1  && < 0.2

  ghc-options:         -Wall
                       
  default-language:    Haskell2010
  if flag(UsePkgConfig)
      Pkgconfig-Depends: taglib_c
  else
      extra-libraries: tag_c

